finished users routes

--- a/starter/server/package.json
+++ b/starter/server/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "create-bucket.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js",
+    "watch": "nodemon server.js --ignore client"
   },
   "keywords": [],
   "author": "",
@@ -12,6 +14,7 @@
   "dependencies": {
     "aws-sdk": "^2.1107.0",
     "express": "^4.17.3",
+    "nodemon": "^2.0.15",
     "uuid": "^8.3.2"
   }
 }
