--- a/starter/server/package.json
+++ b/starter/server/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "aws-sdk": "^2.1107.0",
     "express": "^4.17.3",
+    "multer": "^1.4.4",
     "nodemon": "^2.0.15",
     "uuid": "^8.3.2"
   }
